cmake_minimum_required(VERSION 3.23)
project(Advent_of_Code_2023)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Helpers)
list(APPEND EXTRA_LIBS Helpers)
list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/Helpers")

add_executable(Day1 day1.cpp Helpers/helper.cpp)
add_executable(Day2 day2.cpp Helpers/helper.cpp)
add_executable(Day3 day3.cpp Helpers/helper.cpp)
add_executable(Day4 day4.cpp Helpers/helper.cpp)
add_executable(Day5 day5.cpp Helpers/helper.cpp)
add_executable(Day6 day6.cpp Helpers/helper.cpp)
add_executable(Day7 day7.cpp Helpers/helper.cpp)
add_executable(Day8 day8.cpp Helpers/helper.cpp)
add_executable(Day9 day9.cpp Helpers/helper.cpp)
add_executable(Day10 day10.cpp Helpers/helper.cpp)
add_executable(Day11 day11.cpp Helpers/helper.cpp)
add_executable(Day12 day12.cpp Helpers/helper.cpp)
add_executable(Day13 day13.cpp Helpers/helper.cpp)
add_executable(Day14 day14.cpp Helpers/helper.cpp)
add_executable(Day15 day15.cpp Helpers/helper.cpp)

